--- a/react-redux/package.json
+++ b/react-redux/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "census-profiling-app",
+  "name": "react-redux",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,6 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "joi-browser": "^13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
